--- a/README.me
+++ b/README.me
@@ -1,4 +1,4 @@
-Segunda versão do portfolio: https://github.com/nicolasrmiranda/portfolio-apresentacao-mark
+Primeira versão: https://github.com/nicolasrmiranda/portfolio-apresentacao-mark
 
 Nessa release, atualizei toda parte do JavaScript, havia feito na correria em menos de dois dias.
 Conforme meu aprendizado foi avançando, achei que estava na hora de atualizar aquele código gambiarrento.
